[tool.poetry]
name = "jquants-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
numpy = "^1.23.2"
scipy = "^1.9.0"
xgboost = "^1.6.2"
tqdm = "^4.64.0"
pandas = "^1.4.3"
requests = "^2.28.1"
jquants-api-client = "0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
